--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "^7.12.9",
+    "@types/detox": "^18.1.0",
+    "@types/jest": "^27.0.3",
+    "detox": "^18.23.1",
+    "jest": "^27.2.4"
   },
   "private": true
 }
